--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,9 +10,8 @@ body {
   margin: 0px;
   padding: 0px;
   font-family: "Open Sans", sans-serif !important;
-  background-image: url(https://res.cloudinary.com/kimchidrwas/image/upload/v1636056497/Portfolio%20UI/Fondo_p8b0nf.png);
-  background-position: 100% 22%;
-  background-size: 100%;
+  background-image: url(https://res.cloudinary.com/kimchidrwas/image/upload/v1645212904/Portfolio%20UI/Fondo2_k2r8pm.png);
+  background-size: 100% 100%;
 }
 
 div,
@@ -26,6 +25,12 @@ img {
   margin: 0px;
   padding: 0px;
 }
+
+a {
+  color: #e95ea1 !important;
+  font-weight: 600;
+}
+
 
 .container-fluid {
   padding: 0% 10% 0% 10% !important;
@@ -48,18 +53,20 @@ img {
 
 .navbar-brand {
   color: white !important;
-  font-size: 1.3em !important;
+  font-size: 1.6rem !important;
   font-family: "Mansalva", cursive;
+  text-shadow: 0px 1px 2px rgb(0 0 0 / 50%);
 }
 
-.navbar-brand > img {
+.navbar-brand>img {
   width: 28px;
   margin-bottom: 5px;
 }
 
 .nav-link {
+  text-shadow: 0px 1px 2px rgb(0 0 0 / 50%);
   color: white !important;
-  font-size: 0.92em;
+  font-size: 1.1em;
   font-weight: 200;
   padding: 10px 0px 10px 35px !important;
 }
@@ -71,7 +78,7 @@ img {
 .title {
   text-align: center;
   margin-top: 30px;
-  color: white;
+  color: #25141C;
   font-size: 3em;
   font-family: "Mansalva", cursive;
 }
@@ -84,26 +91,26 @@ img {
 }
 
 .line {
-  color: white;
+  color: #25141C;
   width: 10%;
   margin-top: 0px;
-  border-top: 1.5px solid rgb(255, 255, 255);
+  border-top: 1.5px solid #25141C;
   opacity: 80%;
 }
 
 .title2 {
   text-align: center;
   margin-top: 100px;
-  color: #25141c;
+  color: #25141C;
   font-size: 3em;
   font-family: "Mansalva", cursive;
 }
 
 .line2 {
-  color: #25141c;
+  color: #25141C;
   width: 10%;
   margin-top: 10px;
-  border-top: 1.5px solid #25141c;
+  border-top: 1.5px solid #25141C;
   opacity: 80%;
 }
 
@@ -121,26 +128,6 @@ img {
   margin-left: 0px !important;
 }
 
-.carousel-control-prev {
-  left: -150px !important;
-}
-
-.carousel-control-next {
-  right: -150px !important;
-}
-
-.carousel-control-prev-icon {
-  background-image: url(https://res.cloudinary.com/kimchidrwas/image/upload/v1636059194/Portfolio%20UI/click2_yt4zqn.png) !important;
-  width: 4rem !important;
-  height: 4rem !important;
-}
-
-.carousel-control-next-icon {
-  background-image: url(https://res.cloudinary.com/kimchidrwas/image/upload/v1636059194/Portfolio%20UI/click_ya6dpo.png) !important;
-  width: 4rem !important;
-  height: 4rem !important;
-}
-
 .carousel-indicators [data-bs-target] {
   background-color: #e95ea1 !important;
 }
@@ -148,6 +135,8 @@ img {
 .carousel-inner {
   border-radius: 12px;
   opacity: 95%;
+  margin-bottom: 40px;
+  cursor: pointer;
 }
 
 .carousel-item {
@@ -156,95 +145,33 @@ img {
   background-size: 100%;
 }
 
-.carousel1 > img,
-.carousel2 > img,
-.carousel3 > img,
-.carousel4 > img,
-.carousel5 > img,
-.carousel6 > img,
-.carousel7 > img,
-.carousel8 > img,
-.carousel9 > img,
-.carousel10 > img {
+.carousel>img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   vertical-align: middle;
+}
+
+.gallery {
+  display: flex;
+}
+
+.gal-image {
   cursor: pointer;
+  transition: 300ms all;
+  width: 25%;
+  margin: 10px;
 }
 
-.carousel3 > img,
-.carousel4 > img {
-  object-position: 100% 35%;
-}
-
-.carousel5 > img,
-.carousel6 > img,
-.carousel7 > img{
-  object-position: 100% 25%;
-}
-
-.carousel2 > img {
-  object-position: 100% 60%;
-}
-
-.conceptualization {
-  display: flex;
-  margin-bottom: 50px;
-}
-
-.concept-information {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding: 0px 50px;
-}
-
-.concept-title,
-.anim-title {
-  color: #25141c;
-  font-weight: 700;
-  font-size: 1.5em;
-}
-
-.concept-desc,
-.anim-desc {
-  color: #5e4450;
-  font-weight: 400;
-  font-size: 0.95em;
-  text-align: justify;
-}
-
-.concept-preview {
-  display: inherit;
-  flex-direction: column;
-  width: 250px;
-}
-
-.concept-preview > img {
-  width: 14vh;
-  height: 15vh;
+.gal-image>img {
+  border-radius: 10px;
   object-fit: cover;
-  border-radius: 15%;
-  padding: 5px 5px 10px 0px;
-  cursor: pointer;
+  width: 100%;
+  height: 350px;
 }
 
-.concept-preview > img:hover {
+.gal-image:hover {
   transform: scale(1.05);
-}
-
-.concept-image {
-  padding: 0px !important;
-  margin-right: 20px;
-}
-
-.concept-image > img {
-  width: 72vh;
-  height: 65vh;
-  object-fit: cover;
-  border-radius: 2%;
-  border: 1px #25141c11 solid;
 }
 
 .videojuegos {
@@ -256,14 +183,15 @@ img {
   display: inherit;
   flex-direction: column;
   width: 50%;
+  margin-bottom: 20px;
 }
 
 .game1 {
   margin-right: 50px;
 }
 
-.game1 > video,
-.game2 > video {
+.game1>video,
+.game2>video {
   width: 100%;
   height: 328px;
   background-color: black;
@@ -308,15 +236,10 @@ img {
 }
 
 .game-desc {
-  color: #5e4450;
+  color: #25141cc4;
   font-weight: 400;
   font-size: 0.95em;
   text-align: justify;
-}
-
-.animacion {
-  display: flex;
-  margin-bottom: 50px;
 }
 
 .video2 {
@@ -325,30 +248,6 @@ img {
   background-color: black;
   border-radius: 15px;
   margin-bottom: 20px;
-}
-
-.anim-details {
-  width: 52%;
-}
-
-.anim-desc {
-  height: 256px !important;
-}
-
-.anim-information {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding: 0px 40px;
-}
-
-.anim-preview {
-  width: 100%;
-  padding: 0px 40px;
-}
-
-.anim-preview > video:hover {
-  transform: scale(1.1);
 }
 
 .preview-video {
@@ -370,9 +269,12 @@ img {
   top: 0;
   width: 100%;
   height: 100%;
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.7); /* Black w/ opacity */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0);
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.7);
+  /* Black w/ opacity */
 }
 
 #caption {
@@ -405,6 +307,7 @@ img {
   from {
     -webkit-transform: scale(0);
   }
+
   to {
     -webkit-transform: scale(1);
   }
@@ -414,10 +317,12 @@ img {
   from {
     transform: scale(0);
   }
+
   to {
     transform: scale(1);
   }
 }
+
 /* Close Button */
 .close {
   z-index: 3;
@@ -462,8 +367,8 @@ img {
   transform: scale(1.05);
 }
 
-.model-gallery > img,
-.model-gallery2 > img {
+.model-gallery>img,
+.model-gallery2>img {
   width: 100%;
   height: 35vh;
   object-fit: cover;
@@ -473,6 +378,7 @@ img {
 .footer {
   display: flex;
   flex-direction: column;
+  padding-top: 25px;
   height: 170px;
 }
 
